<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:contentPadding="4dp"
    card_view:cardCornerRadius="2dp"
    card_view:cardElevation="2dp"
    android:layout_margin="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp">

        <TextView
            android:id="@+id/name_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:layout_margin="4dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/message_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/message_content"
            android:layout_below="@+id/name_tv"
            android:layout_margin="4dp"/>

        <TextView
            android:id="@+id/date_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:layout_below="@id/message_tv"
            android:layout_margin="4dp"
            android:textAlignment="viewEnd"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>